--- a/index.html
+++ b/index.html
@@ -1,24 +1,58 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Mushroom App - Connect Farmers & Buyers</title>
-    <meta name="description" content="Smart Mushroom App connects mushroom farmers and buyers through technology. Learn cultivation techniques, access market opportunities, and grow your business." />
-    <meta name="author" content="Smart Mushroom App" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Smart Mushroom App - Connect Farmers & Buyers</title>
+        <meta
+            name="description"
+            content="Smart Mushroom App connects mushroom farmers and buyers through technology. Learn cultivation techniques, access market opportunities, and grow your business."
+        />
+        <meta name="author" content="Smart Mushroom App" />
 
-    <meta property="og:title" content="Smart Mushroom App - Agricultural Innovation" />
-    <meta property="og:description" content="Join the smart farming revolution. E-learning, market linkage, and hub management for mushroom farmers and buyers." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+        <meta
+            property="og:title"
+            content="Smart Mushroom App - Agricultural Innovation"
+        />
+        <meta
+            property="og:description"
+            content="Join the smart farming revolution. E-learning, market linkage, and hub management for mushroom farmers and buyers."
+        />
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:image"
+            content="https://lovable.dev/opengraph-image-p98pqg.png"
+        />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@Lovable" />
+        <meta
+            name="twitter:image"
+            content="https://lovable.dev/opengraph-image-p98pqg.png"
+        />
+        <script type="text/javascript">
+            // Single Page Apps for GitHub Pages
+            (function (l) {
+                if (l.search[1] === "/") {
+                    var decoded = l.search
+                        .slice(1)
+                        .split("&")
+                        .map(function (s) {
+                            return s.replace(/~and~/g, "&");
+                        })
+                        .join("?");
+                    window.history.replaceState(
+                        null,
+                        null,
+                        l.pathname.slice(0, -1) + decoded + l.hash,
+                    );
+                }
+            })(window.location);
+        </script>
+    </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
